# Cell-digital-twin

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/celltwin/: __init__.py  cli.py  schemas.py  surrogate.py
backend/celltwin/api/: __init__.py  app.py
backend/celltwin/engine/: __init__.py  coupling.py  ode.py  params.py  simulate.py
backend/celltwin/experiments/: __init__.py  population.py  screen.py
backend/tests/: conftest.py  test_api.py  test_bayes.py  test_cells.py  test_engine.py  test_jax_ode.py  test_model.py  test_population.py  test_screening.py  test_surrogate.py  test_validation.py
data/cells/: cancer_cell.yaml  cardiomyocyte.yaml  hepatocyte.yaml  neuron.yaml  proximal_tubule.yaml
data/reference/: calibration.yaml  cytotoxicity.yaml
data/toxins/: acetaminophen.yaml  antimycin_a.yaml  arsenite.yaml  bso.yaml  carbon_tetrachloride.yaml  cisplatin.yaml  cyanide.yaml  doxorubicin.yaml  etoposide.yaml  fccp.yaml  hydrogen_peroxide.yaml  menadione.yaml  oligomycin.yaml  paraquat.yaml  rotenone.yaml  staurosporine.yaml  tbhp.yaml  triton_x100.yaml
docs/: PLAN.md  biology.md  deploy.md  inference.md  validation.md
frontend/: app.js  index.html  style.css  twindata.json
paper/: README.md  celltwin_ieee.tex  make_figures.py  numbers.json
scripts/: build_data.py  build_frontend.py
webapp/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
webapp/src/: App.tsx  api.ts  theme.css  types.ts
(+26 files in other folders)
