[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "celltwin"
version = "0.1.0"
description = "A cell digital twin for toxicology screening (hybrid network + mechanistic ODE engine)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jax>=0.4.28",
    "numpyro>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
celltwin = "celltwin.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["celltwin*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
